refactor(config): NominatimGateway
Refs #31